# goo2d

./: .gitignore  CMakeLists.txt
src/engine/: goo.h
src/engine/components/: SpriteRenderer.h  Transform.h
src/engine/ecs/: Component.cpp  Component.h  Entity.cpp  Entity.h  Layer.cpp  Layer.h  Level.cpp  Level.h
src/engine/infrastructure/: AssetManager.cpp  AssetManager.h  Game.cpp  Game.h
src/engine/rendering/: TextureRenderer.cpp  TextureRenderer.h
src/engine/utils/: Log.cpp  Log.h  LogColor.h  Time.cpp  Time.h
src/test/: main.cpp
